--- a/themes/kiss/layouts/_default/single.html
+++ b/themes/kiss/layouts/_default/single.html
@@ -12,7 +12,7 @@
     {{ if and (.Site.Params.Info.adsense) (.Params.adsenseTop) }}
     {{ partial "adsense" . }}
     {{ end }}
-    <div class="content">
+    <div class="content {{ .File.BaseFileName }}">
       {{ .Content }}
       {{ if .Site.Params.Info.related }}
       <div class="related">{{ partial "related" . }}</div>
