--- a/layouts/shortcodes/chart.html
+++ b/layouts/shortcodes/chart.html
@@ -6,7 +6,7 @@
 <div style="width: {{ $w }}%;height: {{ $h }}px;margin: 0 auto">
     <canvas id="{{ $id }}"></canvas>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
 <script type="text/javascript">
     var ctx = document.getElementById('{{ $id }}').getContext('2d');
     var options = {{ $r | safeJS }};
