Center post images

--- a/themes/kiss/static/css/custom.css
+++ b/themes/kiss/static/css/custom.css
@@ -21,3 +21,9 @@
 .assets-history .categories.visible {
   visibility: visible;
 }
+
+.content img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
